// Copyright 2021 Lightbend Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// tag::actions[]
syntax = "proto3";
package com.example.fibonacci; // <1>

import "akkaserverless/annotations.proto"; // <2>

option java_outer_classname = "FibonacciApi"; // <3>

message Number {
  int64 value = 1;
}

service Fibonacci {
  option (akkaserverless.codegen) = { 
    action: {}  // <4>
  };

  rpc NextNumber(Number) returns (Number) {}
  // end::actions[]
  rpc NextNumbers(Number) returns (stream Number) {}
  rpc NextNumberOfSum(stream Number) returns (Number) {}
  rpc NextNumberOfEach(stream Number) returns (stream Number) {}
  // tag::actions[]
}
// end::actions[]